[tool.poetry]
name = "dataverse"
version = "0.1.0"
description = "Welcome to DataVerse, a repository dedicated to sharing code snippets and notebooks used in my blog posts, articles, and conference talks on machine learning, data science, and related topics."
authors = ["Ivan Reznikov <ivanreznikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Company Homepage" = "https://twitter.com/LangChainAI/status/1713244526079336465"
"Class Homepage" = "https://medium.com/@ivanreznikov/langchain-101-course-updated-668f7b41d6cb"
"Teacher Homepage" = "https://linkedin.com/in/reznikovivan/"
"Code Repository" = "https://github.com/IvanReznikov/DataVerse"
"Bug Tracker" = "https://github.com/IvanReznikov/DataVerse/issues"

[tool.poetry.dependencies]
python = "^3.10.11"
chromadb = ">=0.3.25"
pydantic = ">=1.10.9"
openai = ">=0.27.8"
bs4 = ">=0.0.1"
tiktoken = ">=0.4.0"
langchain = ">=0.0.235"
huggingface-hub = ">=0.16.4"
sentence-transformers = ">=2.2.2"
pandas = ">=2.1.4"
scikit-learn = ">=1.3.2"
opensearch-py = ">=2.4.0"
opensearch-dsl = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = ["chatbot_class", "test"]

[tool.isort]
profile = "black"
src_paths = ["chatbot_class", "test"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["chatbot_class", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
